# suit-processor

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Kconfig  README.md  REQUIREMENTS.md  cose.cmake  manifest.cmake  zcbor.sh
.github/: test-spec.yml
cddl/: chunk_digests.cddl  cose.cddl  cose_encrypt.cddl  cose_sign.cddl  firmware_encryption.cddl  firmware_encryption19.cddl  manifest.cddl  manifest16.cddl  manifest19.cddl  manifest21.cddl  manifest25.cddl  manifest27.cddl  temp_component_id.cddl  trust_domains.cddl  trust_domains03.cddl  trust_domains06.cddl  update_management.cddl  update_management06.cddl
doc/: command_sequence_processor.rst  suit_platform_classes.txt  suit_platform_sequence.txt  suit_processor.txt
include/: cose_decode.h  cose_encode.h  cose_types.h  fih.h  manifest_decode.h  manifest_decode_types.h  manifest_types.h  suit.h  suit_checks.h  suit_command_seq.h  suit_condition.h  suit_decoder.h  suit_directive.h  suit_err.h  suit_legacy.h  suit_manifest.h  suit_platform.h  suit_platform_legacy.h  suit_processor.h  suit_report.h  suit_schedule_seq.h  suit_seq_exec.h  suit_types.h  zcbor_common.h  zcbor_debug.h  zcbor_decode.h  zcbor_encode.h
ncs/: CMakeLists.txt
scripts/: requirements.txt
src/: cose_decode.c  cose_encode.c  fih.c  manifest_decode.c  suit.c  suit_command_seq.c  suit_condition.c  suit_decoder.c  suit_directive.c  suit_legacy.c  suit_manifest.c  suit_schedule_seq.c  suit_seq_exec.c  zcbor_common.c  zcbor_decode.c  zcbor_encode.c
tests/: test.sh  verbose_test.sh
tests/cmake/: test_template.cmake
tests/integration/common/: CMakeLists.txt
tests/integration/common/src/: nrf5420_init.c
tests/integration/fetch_integrated_payload/: CMakeLists.txt  prj.conf  testcase.yaml
tests/integration/fetch_integrated_payload/boards/: nrf54fpga_nrf5420_cpusec.conf  nrf54fpga_nrf5420_cpusec.overlay
tests/integration/fetch_integrated_payload/manifest/: generate_ctab.py  regenerate.sh  sample.json
tests/integration/fetch_integrated_payload/src/: main.c
tests/integration/platform/psa_crypto/: CMakeLists.txt
tests/integration/platform/psa_crypto/include/: suit_platform_internal.h
tests/integration/platform/psa_crypto/src/: suit_plat_commands.c  suit_plat_component_impl_selector.c  suit_plat_components.c  suit_plat_crypto_psa.c  suit_plat_properties.c  suit_plat_rambuf.c  suit_plat_state.c
tests/unit/bootstrap_envelope/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/bootstrap_envelope/src/: main.c
tests/unit/common/: CMakeLists.txt
tests/unit/common/include/: bootstrap_envelope.h  bootstrap_seq.h  complex_arg.h
tests/unit/common/src/: bootstrap_envelope.c  bootstrap_seq.c  complex_arg.c
tests/unit/decoder/: CMakeLists.txt  testcase.yaml
tests/unit/decoder/include/: suit_decoder_test_utils.h  suit_manifest_mock_ext.h  suit_platform_mock_ext.h
tests/unit/decoder/src/: main.c  suit_decoder_test_utils.c  suit_manifest_mock_ext.c  suit_platform_mock_ext.c  test_authenticate_manifest.c  test_authorize_manifest.c  test_create_components.c  test_decode_envelope.c  test_decode_manifest.c  test_decode_sequences.c  test_manifest_digest.c
tests/unit/fetch_integrated_manifests/: CMakeLists.txt  testcase.yaml
tests/unit/fetch_integrated_manifests/include/: suit_platform_mock_ext.h
tests/unit/fetch_integrated_manifests/src/: app.c  main.c  manifest.c  radio.c  root.c  suit_platform_mock_ext.c
tests/unit/fetch_integrated_payload/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/fetch_integrated_payload/include/: suit_platform_mock_ext.h
tests/unit/fetch_integrated_payload/src/: main.c  manifest.c  suit_platform_mock_ext.c
tests/unit/manifest/: CMakeLists.txt  testcase.yaml
tests/unit/manifest/src/: main.c
tests/unit/manifest_metadata/: CMakeLists.txt  testcase.yaml
tests/unit/manifest_metadata/src/: main.c
tests/unit/nested_seq/: CMakeLists.txt  testcase.yaml
tests/unit/nested_seq/src/: main.c
tests/unit/seq_execution/: CMakeLists.txt  manifest_decode.c  testcase.yaml
tests/unit/seq_execution/include/: common_parameters.h  suit_platform_mock_ext.h
tests/unit/seq_execution/src/: common_parameters.c  main.c  suit_condition_dependency_integrity.c  suit_condition_image_match.c  suit_conditions.c  suit_directive_process_dependency.c  suit_platform_mock_ext.c  test_directive_copy.c  test_directive_fetch.c  test_directive_invoke.c  test_directive_override_parameters.c  test_directive_set_parameters.c  test_directive_swap.c  test_directive_write.c  test_directives_null_args.c
tests/unit/seq_validation/: CMakeLists.txt  testcase.yaml
tests/unit/seq_validation/src/: main.c
tests/unit/try_each/: CMakeLists.txt  testcase.yaml
tests/unit/try_each/src/: main.c
zephyr/: module.yml
